# sliderwolf

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  curses_grid.py  pyproject.toml
sliderwolf/: __main__.py  app.py  application.py  bank.py  midi.py  utils.py
sliderwolf/application/: services.py
sliderwolf/domain/: interfaces.py  models.py
sliderwolf/infrastructure/: midi.py  storage.py  ui.py
sliderwolf/presentation/: controllers.py
